# tenji-maker-challenge-hs

./: README.md  tenji.cabal
app/: Main.hs
